force-app/main/default/objects/CLM_ProfileValidation__c/CLM_ProfileValidation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CLM_ProfileValidation</label>
</CustomObject>