force-app/main/default/objects/CLM_ProfileValidation__c/fields/Channel_Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Agreement__c</fullName>
    <description>This checkbox field is used to validate if user is able to create Channel Partner Agreement.</description>
    <defaultValue>false</defaultValue>
    <label>Channel Partner Agreement</label>
    <type>Checkbox</type>
</CustomField>