force-app/main/default/objects/CLM_ProfileValidation__c/fields/Illumina_Lab_Services__c.field-meta.xml
<CustomField>
    <fullName>Illumina_Lab_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Illumina Lab Services</label>
    <type>Checkbox</type>
</CustomField>