force-app/main/default/objects/CLM_ProfileValidation__c/fields/Master_Customer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Agreement__c</fullName>
    <description>This checkbox field is used to validate if user is able to create Master Customer Agreement.</description>
    <defaultValue>false</defaultValue>
    <label>Master Customer Agreement</label>
    <type>Checkbox</type>
</CustomField>