force-app/main/default/objects/CLM_ProfileValidation__c/fields/Negotiated_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Terms_and_Conditions__c</fullName>
    <description>This checkbox field is used to validate if user is able to create Negotiated Terms and Conditions</description>
    <defaultValue>false</defaultValue>
    <label>Negotiated Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>