force-app/main/default/objects/CLM_ProfileValidation__c/fields/Standing_Quote__c.field-meta.xml
<CustomField>
    <fullName>Standing_Quote__c</fullName>
    <description>This checkbox field is used to validate if user is able to create Standing Quote.</description>
    <defaultValue>false</defaultValue>
    <label>Standing Quote</label>
    <type>Checkbox</type>
</CustomField>