force-app/main/default/objects/CLM_ProfileValidation__c/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <description>This checkbox field is used to validate if user is able to create Tender.</description>
    <defaultValue>false</defaultValue>
    <label>Tender</label>
    <type>Checkbox</type>
</CustomField>