force-app/main/default/objects/CLM_ProfileValidation__c/listViews/With_flags.listView-meta.xml
<ListView>
    <fullName>With_flags</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Standing_Quote__c</columns>
    <columns>Channel_Partner_Agreement__c</columns>
    <columns>Master_Customer_Agreement__c</columns>
    <columns>Master_Service_Agreement__c</columns>
    <columns>Negotiated_Terms_and_Conditions__c</columns>
    <columns>Tender__c</columns>
    <columns>Special_Programs__c</columns>
    <columns>Partnership_Agreement__c</columns>
    <columns>Quality_Agreement__c</columns>
    <columns>Open_Offer_Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <label>With flags</label>
    <language>en_US</language>
</ListView>